--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
-version: '3'
+version: "3"
 services:
-  api:
-    container_name: prc-api
-    image: prc-api-server-image:latest
-    build: 
-      context: .
-      dockerfile: ./Dockerfile
-    volumes:
-      - .:/root/app
-    command: sh -c "go run ." # コンテナ起動時に実行するコマンド
+  gateway:  #サービス名
+    build:
+      context: ./gateway
+      dockerfile: Dockerfile
+    container_name: gateway  #コンテナの名前
+    tty: true  #コンテナの永続化
     ports:
-      - "8080:8080"
-    tty: true # コンテナの永続化
-    environment:
-      - TZ=Asia/Tokyo
+      - '8080:8080'
+    volumes:  #マウントディレクトリ
+      - .:/app
